@@ -1,3 +1,3 @@
 #...
-[0-9a-f]+ T bar
+[0-9a-f]+ [DT] bar
 #...
