@@ -1,3 +1,3 @@
 #...
-[0-9a-f]+ T foo
+[0-9a-f]+ [DT] foo
 #...
